Added new author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Scott Chadde                             <scott.chadde@continuum.io>
 Shiquan Wang                             <shiquanwang@gmail.com>
 Siu Kwan Lam                             <michael.lam.sk@gmail.com>
 Stan Seibert                             <stan.seibert@continuum.io>
+Stefan Seefeld				 <stefan@seefeld.name>
 Thomas Kluyver                           <takowl@gmail.com>
 timo                                     <timonator@perpetuum-immobile.de>
 Travis E. Oliphant                       <teoliphant@gmail.com>
